--- a/Level 2/index.html
+++ b/Level 2/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="text">
-
-    </div>
+    <div id="one"></div>
+    <div id="tow"></div>
+    
 </body>
 </html>
