--- a/Level 7/Project/index.html
+++ b/Level 7/Project/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width= , initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="index.css">
+    <title>Progress Bar</title>
 </head>
 <body>
-    
+    <div id="progress-bar">
+        <div id="progress"></div>
+    </div>
 </body>
 </html>
