--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Assistant:wght@200;300;400;500;600;800&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@200;300;400;500;600;700;800&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Online Store</title>
 </head>
+
 <body>
     <header>
         <div class="logo-container">
             <a href="#"><img class="myntra-logo" src="images/myntra_logo.webp" alt="Myntra-logo"></a>
         </div>
         <div class="nav-bar">
-             <a href="#">MEn</a>
-             <a href="#">Woman</a>
-             <a href="#">Kides</a>
-             <a href="#">Home & Living</a>
-             <a href="#">Beauty</a>
-             <a href="#">Studio<sup>New</sup></a>
+            <a href="#">MEn</a>
+            <a href="#">Woman</a>
+            <a href="#">Kides</a>
+            <a href="#">Home & Living</a>
+            <a href="#">Beauty</a>
+            <a href="#">Studio<sup>New</sup></a>
         </div>
-        <div class="search-bar"><span class="material-symbols-outlined">
-            search
-            </span></div>
+        <div class="search-bar"><span class="material-symbols-outlined search-bar-icon" >search</span>
+            <input class="search-bar-input" type="text" placeholder="Search for products, brands and more">
+        </div>
         <div class="action-bar">action</div>
     </header>
     <main>
@@ -35,4 +39,5 @@
     </main>
     <footer>footer</footer>
 </body>
+
 </html>
