--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -27,17 +27,113 @@
             <a href="#">Beauty</a>
             <a href="#">Studio<sup>New</sup></a>
         </div>
-        <div class="search-bar"><span class="material-symbols-outlined search-bar-icon" >search</span>
+        <div class="search-bar"><span class="material-symbols-outlined search-bar-icon">search</span>
             <input class="search-bar-input" type="text" placeholder="Search for products, brands and more">
         </div>
-        <div class="action-bar">action</div>
+        <div class="action-bar">
+            <div class="action-container">
+                <span class="material-symbols-outlined action-icon">person </span>
+                <span class="action_name">Profile</span>
+            </div>
+            <div class="action-container">
+
+                <span class="material-symbols-outlined action-icon">favorite</span>
+                <span class="action_name">Wishlist</span>
+            </div>
+            <div class="action-container">
+                <span class="material-symbols-outlined action-icon">shopping_bag</span>
+                <span class="action_name">Bag</span>
+            </div>
+
+        </div>
     </header>
     <main>
-        <div class="banner-container">banner</div>
-        <div class="category-heading">category heading</div>
-        <div class="category-item">category item</div>
+        <div class="banner-container">
+            <img class="banner-image" src="/Final Project/images/banner.jpg" alt="">
+            <div class="category-heading">MEDAL WORTHY BRANDS TO BAG</div>
+            <div class="category-item">
+                <a href="#">
+                    <img class="sale-item" src="images/categories/1.webp" alt="">
+                </a>
+                <a href="#">
+                    <img class="sale-item" src="images/categories/2.webp" alt="">
+                </a>
+                <a href="#">
+                    <img class="sale-item" src="images/categories/3.webp" alt="">
+                </a>
+                <a href="#">
+                    <img class="sale-item" src="images/categories/4.webp" alt="">
+                </a>
+                <a href="#">
+                    <img class="sale-item" src="images/categories/5.webp" alt="">
+                </a>
+                <a href="#">
+                    <img class="sale-item" src="images/categories/6.webp" alt="">
+                </a>
+                <a href="#">
+                    <img class="sale-item" src="images/categories/7.webp" alt="">
+                </a>
+            </div>
+
+            <div class="category-heading">SHOP BY CATEGORY </div>
+            <div class="category-item">
+
+                <div class="category-item">
+                    <a href="#">
+                        <img class="sale-item" src="images/offers/1.png" alt="">
+                        <a href="#">
+                            <img class="sale-item" src="images/offers/2.png" alt="">
+                            <a href="#">
+                                <img class="sale-item" src="images/offers/3.png" alt="">
+                                <a href="#">
+                                    <img class="sale-item" src="images/offers/4.png" alt="">
+                                    <a href="#">
+                                        <img class="sale-item" src="images/offers/5.png" alt="">
+                                        <a href="#">
+                                            <img class="sale-item" src="images/offers/6.png" alt="">
+                                            <a href="#">
+                                                <img class="sale-item" src="images/offers/7.png" alt="">
+                                                <a href="#">
+                                                    <img class="sale-item" src="images/offers/8.png" alt="">
+                                                    <a href="#">
+                                                        <img class="sale-item" src="images/offers/9.png" alt="">
+                                                        <a href="#">
+                                                            <img class="sale-item" src="images/offers/10.png" alt="">
+                                                            <a href="#">
+                                                                <img class="sale-item" src="images/offers/11.png"
+                                                                    alt="">
+                                                                <a href="#">
+                                                                    <img class="sale-item" src="images/offers/12.png"
+                                                                        alt=""></a>
+                </div>
+            </div>
     </main>
-    <footer>footer</footer>
+    <footer>
+        <div class="footer-container">
+            <div class="footer-column">
+                <h3 class="footer-header">ONLINE SHOPPING</h3>
+                <a href="#">Men</a>
+                <a href="#">Woman</a>
+                <a href="#">Kides</a>
+                <a href="#">Home & Living</a>
+                <a href="#">Beauty</a>
+            </div>
+            <div class="footer-column">
+                <h3 class="footer-header">CUSTOMER POLICIES</h3>
+                <a href="#">Contact Us</a>
+                <a href="#">FAQ</a>
+                <a href="#">Terms Of Use</a>
+                <a href="#">Shipping</a>
+                <a href="#">Grievance Officer</a>
+            </div>
+        </div>
+        <hr>
+
+        <div class="copy-right">
+            © 2023 www.myntra.com. All rights reserved.
+        </div>
+    </footer>
+
 </body>
 
 </html>
